--- a/css/main-style.css
+++ b/css/main-style.css
@@ -822,7 +822,7 @@ strong {
   color: var(--p-color);
   display: block;
   font-size: copyright-font-size;
-  margin-top: 5px;
+  margin-top: 5   px;
 }
 
 .form-check-input[type=checkbox] {
@@ -1176,5 +1176,679 @@ strong {
     min-width: inherit;
   }
 }
+
+about-in {
+  color: #f9f9f9;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+body {
+  margin-top: 20px;
+}
+
+.history-wrapper {
+  position: relative;
+  padding: 50px 0 50px;
+}
+
+.history-wrapper:after {
+  content: "";
+  width: 3px;
+  height: 100%;
+  background: #ededed;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+}
+
+.history-wrapper .title-wrap {
+  opacity: 0.2;
+  padding: 100px 0 0 45px;
+}
+
+.history-wrapper .timeline-box {
+  position: relative;
+}
+
+.one-of-two {
+  width: 50%;
+  float: left;
+}
+
+.history-wrapper .timeline-box:not(:last-child) {
+  margin-bottom: 140px;
+}
+
+.timeline-box:nth-child(2n) {
+  padding: 0 0 0 140px;
+}
+
+.history-wrapper .timeline-box:nth-child(2n) {
+  margin-bottom: 140px;
+}
+
+.history-wrapper .timeline-box:nth-child(2n + 1) {
+  margin-top: -24%;
+  text-align: right;
+}
+
+.timeline-box:nth-child(2n + 1) {
+  padding: 0 140px 0 0;
+}
+
+.year {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  background: #fff;
+  top: 30%;
+  color: #3b3b3b;
+  transform: translateY(-50%);
+  border: 1px solid #dbdbdb;
+  line-height: 100px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.timeline-box:nth-child(2n) .year {
+  left: 25px;
+}
+
+.timeline-box:nth-child(2n + 1) .year {
+  right: 32px;
+}
+
+.year:before {
+  content: "";
+  width: 15px;
+  height: 15px;
+  border-left: 1px solid #dbdbdb;
+  border-bottom: 1px solid #dbdbdb;
+  background: #ffffff;
+  position: absolute;
+  top: 50%;
+  margin-top: -7.5px;
+}
+
+.timeline-box:nth-child(2n) .year:before {
+  left: -8px;
+  transform: rotate(45deg);
+}
+
+.timeline-box:nth-child(2n + 1) .year:before {
+  right: -8px;
+  transform: rotate(-135deg);
+}
+
+.timeline-box:after {
+  content: "";
+  width: 3px;
+  height: 0;
+  background: #ffa200;
+  position: absolute;
+  top: 30%;
+  transform: translateY(-50%);
+  z-index: 1;
+  transition: all 0.3s ease-in-out;
+}
+
+.timeline-box:nth-child(2n):after {
+  left: -1.5px;
+}
+
+.timeline-box:nth-child(2n + 1):after {
+  right: -1.5px;
+}
+
+.timeline-box:hover:after {
+  height: 97px;
+}
+
+.timeline-box:before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  border: 5px solid #ededed;
+  position: absolute;
+  background: #fff;
+  z-index: 2;
+  top: 30%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease-in-out;
+}
+
+.timeline-box:nth-child(2n):before {
+  left: -10.5px;
+}
+
+.timeline-box:nth-child(2n + 1):before {
+  right: -10.5px;
+}
+
+.timeline-box:hover:before {
+  border: 5px solid #ffa200;
+}
+
+@media screen and (max-width: 1199px) {
+  .year {
+    width: 90px;
+    height: 90px;
+    line-height: 90px;
+    font-size: 22px;
+  }
+  .spl {
+    
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .history-wrapper {
+    padding: 30px 0 30px;
+  }
+
+  .history-wrapper .title-wrap {
+    padding: 0;
+    margin-bottom: 30px;
+  }
+
+  .title-wrap.one-of-two {
+    width: 100%;
+  }
+
+  .history-wrapper:after {
+    left: 0;
+  }
+
+  .history-wrapper .timeline-box:nth-child(2n) {
+    padding: 0 0 0 140px;
+  }
+
+  .history-wrapper .timeline-box:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .timeline-box.one-of-two,
+  .timeline-box .img img {
+    width: 100%;
+  }
+
+  .history-wrapper .timeline-box:nth-child(2n + 1) {
+    margin-top: 0;
+    text-align: left;
+  }
+
+  .timeline-box:nth-child(2n + 1) .year {
+    left: 32px;
+  }
+
+  .timeline-box:nth-child(2n + 1):before {
+    left: -10.5px;
+  }
+
+  .timeline-box:nth-child(2n + 1) .year:before {
+    left: -8px;
+    transform: rotate(45deg);
+  }
+
+  .timeline-box:nth-child(2n + 1):after {
+    left: -1.5px;
+  }
+
+  .history-wrapper .timeline-box:nth-child(2n + 1) {
+    margin-top: 0;
+    text-align: left;
+  }
+
+  .timeline-box:nth-child(2n + 1) {
+    padding: 0 0 0 140px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+
+  .history-wrapper:after,
+  .year,
+  .timeline-box:before {
+    display: none;
+  }
+
+  .history-wrapper {
+    padding: 0;
+  }
+
+  .history-wrapper .timeline-box:nth-child(2n),
+  .history-wrapper .timeline-box:nth-child(2n + 1) {
+    padding: 0 15px;
+  }
+
+  .history-wrapper .timeline-box:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  .timeline-box .content {
+    text-align: center;
+  }
+
+  .timeline-box:nth-child(2n):after,
+  .timeline-box:nth-child(2n + 1):after {
+    display: none;
+  }
+}
+
+.mb-1-6,
+.my-1-6 {
+  margin-bottom: 1.6rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* This is the CSS code for Work experience section */
+
+body {
+  margin-top: 20px;
+}
+
+.section {
+  padding: 100px 0;
+  position: relative;
+}
+
+.gray-bg {
+  background-color: #f5f5f5;
+}
+
+.section-title h2 {
+  font-weight: 700;
+  color: #585ca4;
+  font-size: 45px;
+  margin: 0 0 15px;
+  border-left: 5px solid #18b48c;
+  padding-left: 15px;
+}
+
+.section-title {
+  padding-bottom: 45px;
+}
+
+.section-title p {
+  margin: 0;
+  font-size: 18px;
+}
+
+/* Resume Box
+---------------------*/
+.resume-box {
+  background: #ffffff;
+  box-shadow: 0 0 1.25rem rgba(31, 45, 61, 0.08);
+  border-radius: 10px;
+}
+
+.resume-box ul {
+  margin: 0;
+  padding: 30px 20px;
+  list-style: none;
+}
+
+.resume-box li {
+  position: relative;
+  padding: 0 20px 0 60px;
+  margin: 0 0 30px;
+}
+
+.resume-box li:last-child {
+  margin-bottom: 0;
+}
+
+.resume-box li:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 20px;
+  border-left: 1px dashed #18b48c;
+  bottom: 0;
+}
+
+.resume-box .icon {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  color: #18b48c;
+  line-height: 40px;
+  background: #ffffff;
+  text-align: center;
+  z-index: 1;
+  border: 1px dashed;
+  border-radius: 50%;
+}
+
+.resume-box .time {
+  background: #18b48c;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 2px 10px;
+  display: inline-block;
+  margin-bottom: 12px;
+  border-radius: 20px;
+  font-weight: 600;
+}
+
+.resume-box h5 {
+  font-weight: 700;
+  color: #585ca4;
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.resume-box p {
+  margin: 0;
+}
+
+.resume-box li:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 20px;
+  border-left: 1px dashed #18b48c;
+  bottom: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* This part is for the loading screen animation snippet
+Do not edit here unless any color change is needed; 
+duration and fade can be adjusted in the js file inside click-scroll.js */
+
+
+.loadding-page {
+  width: 100%;
+  height: 100%;
+  background: #18b48c;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+}
+
+.cssload-box-loading {
+  width: 49px;
+  height: 49px;
+  margin: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.cssload-box-loading:before {
+  content: '';
+  width: 49px;
+  height: 5px;
+  background: #000000;
+  opacity: 0.1;
+  position: absolute;
+  top: 58px;
+  left: 0;
+  border-radius: 50%;
+  animation: shadow 0.58s linear infinite;
+  -o-animation: shadow 0.58s linear infinite;
+  -ms-animation: shadow 0.58s linear infinite;
+  -webkit-animation: shadow 0.58s linear infinite;
+  -moz-animation: shadow 0.58s linear infinite;
+}
+
+.cssload-box-loading:after {
+  content: '';
+  width: 49px;
+  height: 49px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 3px;
+  animation: cssload-animate 0.58s linear infinite;
+  -o-animation: cssload-animate 0.58s linear infinite;
+  -ms-animation: cssload-animate 0.58s linear infinite;
+  -webkit-animation: cssload-animate 0.58s linear infinite;
+  -moz-animation: cssload-animate 0.58s linear infinite;
+}
+
+@keyframes cssload-animate {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+
+  25% {
+    transform: translateY(9px) rotate(22.5deg);
+  }
+
+  50% {
+    transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 39px;
+  }
+
+  75% {
+    transform: translateY(9px) rotate(67.5deg);
+  }
+
+  100% {
+    transform: translateY(0) rotate(90deg);
+  }
+}
+
+@-o-keyframes cssload-animate {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+
+  25% {
+    -o-transform: translateY(9px) rotate(22.5deg);
+  }
+
+  50% {
+    -o-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 39px;
+  }
+
+  75% {
+    -o-transform: translateY(9px) rotate(67.5deg);
+  }
+
+  100% {
+    -o-transform: translateY(0) rotate(90deg);
+  }
+}
+
+@-ms-keyframes cssload-animate {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+
+  25% {
+    -ms-transform: translateY(9px) rotate(22.5deg);
+  }
+
+  50% {
+    -ms-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 39px;
+  }
+
+  75% {
+    -ms-transform: translateY(9px) rotate(67.5deg);
+  }
+
+  100% {
+    -ms-transform: translateY(0) rotate(90deg);
+  }
+}
+
+@-webkit-keyframes cssload-animate {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+
+  25% {
+    -webkit-transform: translateY(9px) rotate(22.5deg);
+  }
+
+  50% {
+    -webkit-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 39px;
+  }
+
+  75% {
+    -webkit-transform: translateY(9px) rotate(67.5deg);
+  }
+
+  100% {
+    -webkit-transform: translateY(0) rotate(90deg);
+  }
+}
+
+@-moz-keyframes cssload-animate {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+
+  25% {
+    -moz-transform: translateY(9px) rotate(22.5deg);
+  }
+
+  50% {
+    -moz-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 39px;
+  }
+
+  75% {
+    -moz-transform: translateY(9px) rotate(67.5deg);
+  }
+
+  100% {
+    -moz-transform: translateY(0) rotate(90deg);
+  }
+}
+
+@keyframes shadow {
+
+  0%,
+  100% {
+    transform: scale(1, 1);
+  }
+
+  50% {
+    transform: scale(1.2, 1);
+  }
+}
+
+@-o-keyframes shadow {
+
+  0%,
+  100% {
+    -o-transform: scale(1, 1);
+  }
+
+  50% {
+    -o-transform: scale(1.2, 1);
+  }
+}
+
+@-ms-keyframes shadow {
+
+  0%,
+  100% {
+    -ms-transform: scale(1, 1);
+  }
+
+  50% {
+    -ms-transform: scale(1.2, 1);
+  }
+}
+
+@-webkit-keyframes shadow {
+
+  0%,
+  100% {
+    -webkit-transform: scale(1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale(1.2, 1);
+  }
+}
+
+@-moz-keyframes shadow {
+
+  0%,
+  100% {
+    -moz-transform: scale(1, 1);
+  }
+
+  50% {
+    -moz-transform: scale(1.2, 1);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
